@@ -1,0 +1,44 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- edited with XML Spy v4.1 U (http://www.xmlspy.com) by Anton Spaans (R & D) -->
+<xs:schema xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xs="http://www.w3.org/2001/XMLSchema" elementFormDefault="qualified" attributeFormDefault="unqualified">
+	<xs:attributeGroup name="common-attrs">
+		<xs:attribute name="field-name" type="xs:string" use="required"/>
+		<xs:attribute name="type" type="xs:string" use="required"/>
+		<xs:attribute name="required" type="xs:string" use="optional"/>
+		<xs:attribute name="read-only" type="xs:string" use="optional"/>
+		<xs:attribute name="format" type="xs:string" use="optional"/>
+		<xs:attribute name="hint" type="xs:string" use="optional"/>
+	</xs:attributeGroup>
+	<xs:attributeGroup name="num-attrs">
+		<xs:attribute name="min-value" type="xs:string" use="optional"/>
+		<xs:attribute name="max-value" type="xs:string" use="optional"/>
+		<xs:attribute name="digits" type="xs:string" use="optional"/>
+		<xs:attribute name="precision" type="xs:string" use="optional"/>
+	</xs:attributeGroup>
+	<xs:complexType name="fieldType" abstract="true">
+		<xs:simpleContent>
+			<xs:extension base="xs:string">
+				<xs:attributeGroup ref="common-attrs"/>
+				<xs:attributeGroup ref="num-attrs"/>
+			</xs:extension>
+		</xs:simpleContent>
+	</xs:complexType>
+	<xs:element name="top-element">
+		<xs:complexType>
+			<xs:sequence>
+				<xs:element name="percentage" minOccurs="0">
+					<xs:complexType>
+						<xs:simpleContent>
+							<xs:restriction base="fieldType">
+								<xs:attribute name="type" fixed="Percentage"/>
+								<xs:attribute name="min-value" default="1"/>
+								<xs:attribute name="digits" default="9"/>
+								<xs:attribute name="precision" default="5"/>
+							</xs:restriction>
+						</xs:simpleContent>
+					</xs:complexType>
+				</xs:element>
+			</xs:sequence>
+		</xs:complexType>
+	</xs:element>
+</xs:schema>
